# nalgebra

./: .gitignore  Cargo.toml
src/: lib.rs
src/structs/: vector_macros.rs
