[package]
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "Linear algebra library for computer physics, computer graphics and general low-dimensional linear algebra for Rust."
documentation = "http://nalgebra.org/doc/nalgebra/index.html"
homepage = "http://nalgebra.org"
keywords = ["linear", "algebra", "matrix", "vector"]
license = "BSD-3-Clause"
name = "nalgebra"
readme = "README.md"
repository = "https://github.com/sebcrozet/nalgebra"
version = "0.10.1"

[dependencies]
num = "0.1"
rand = "0.3"
serde = "0.9"
serde_derive = "0.9"

[dependencies.algebra]
optional = true
version = "0.2"

[dependencies.generic-array]
optional = true
version = "0.2"

[dependencies.quickcheck]
optional = true
version = "0.2"

[dependencies.typenum]
optional = true
version = "1.3"

[features]
abstract_algebra = ["algebra"]
arbitrary = ["quickcheck"]
generic_sizes = ["generic-array", "typenum"]

[lib]
name = "nalgebra"
path = "src/lib.rs"
